--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <title>Overwatch Olympics</title>
 
     </head>
 
     <body>
+        {{!-- content from index.handlebars below --}}
+        {{{body}}}
         
     </body>
 </html>
