--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,16 +14,31 @@ header {
 }
   
 h1 {
-    padding: 20px 0;
+    padding: 20px;
     margin: 0;
     margin-bottom: 20px;
-    font-size: 28px;
+    font-size: 42px;
     color: #eee;
     text-align: center;
+}
+h2 {
+    padding: 20px;
+    margin: 0;
+    font-size: 32px;
+    text-decoration: underline;
 }
 
 .container {
     width: 760px;
-    margin: 0 auto;
+    margin: 20px auto;
+    padding: 25px;
+    border: 3px solid #333;
+    border-radius: 25px;    
 }
 
+#entry {
+    width: 420px;
+    margin: 20px auto;
+    padding: 20px;
+    /*border: 3px solid #333;*/
+}
