--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,46 @@
-<h1>Testing</h1>
+
+    <h1>Welcome, Gamers. Prepare for Battle.</h1>
+    
+    <div class="container">
+        
+        <div class="row">
+            <div id="enter-names">
+                <h2>Enter Competitors Here</h2>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div id="choose-battle-mode" class="card">
+                <h2 class="card-header">Choose Battle Mode</h2>
+                <div class="card-body">
+                    <div class="text-center">
+                        <button class="btn btn-outline-dark btn-lg high-score-button">
+                            High Score Hero</button>
+                        <button class="btn btn-outline-dark btn-lg kotk-button">
+                            King of the Kills</button>
+                        <button class="btn btn-outline-dark btn-lg kd-button">
+                            K/D Clash</button>
+                    </div>
+                </div>
+            </div>     
+        </div>
+
+        <div class="row">
+            <div id="choose-trial-length" class="card">
+                <h2 class="card-header">Choose Trial Length</h2>
+                <div class="card-body">
+                    <div class="text-center">
+                        <button class="btn btn-outline-dark btn-lg one-round-button">
+                            1 match</button>
+                          <button class="btn btn-outline-dark btn-lg three-round-button">
+                            3 matches</button>
+                          <button class="btn btn-outline-dark btn-lg five-round-button">
+                            5 matches</button>
+                    </div>
+                </div>
+            </div>   
+        </div>
+    </div>
+
+
