--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,3 +2,48 @@ form.signup,
 form.login {
   margin-top: 50px;
 }
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 18px;
+  line-height: 150%;
+  color: #333;
+  background: #efeee7;
+  text-align: center;
+}
+
+header {
+  background: #333;
+}
+
+h1 {
+  padding: 20px;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 42px;
+  color: #eee;
+  text-align: center;
+}
+h2 {
+  padding: 20px;
+  margin: 0;
+  font-size: 32px;
+  text-decoration: underline;
+}
+
+.container {
+  width: 760px;
+  margin: 20px auto;
+  padding: 25px;
+  border: 3px solid #333;
+  border-radius: 25px;    
+}
+
+#entry {
+  width: 420px;
+  margin: 20px auto;
+  padding: 20px;
+  /*border: 3px solid #333;*/
+}
