--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,6 +1,6 @@
 body {
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 18px;
     line-height: 150%;
@@ -9,14 +9,24 @@ body {
     text-align: center;
 }
 
-header {
-    background: #4A4C4E;
+.header-1 {
+    background-color: #4A4C4E;
+    color: #FFFFFF;
+    font-size: 48px;
+}
+
+.header-2 {
+    background-color: #4A4C4E;
+    color: #FFFFFF;
+    border: 3px solid #4A4C4E;
+    border-radius: 25px;
+    font-size: 26px;
 }
   
 h1 {
     padding: 20px;
-    margin: 0;
-    margin-bottom: 20px;
+    margin: 0 auto;
+    margin-bottom: 25px;
     font-size: 42px;
     color: #FFFFFF;
     text-align: center;
@@ -24,22 +34,14 @@ h1 {
 
 h2 {
     padding: 1%;
-    margin: 0;
-    font-size: 32px;
-    text-decoration: underline;
-    color: #4A4C4E;
-}
-
-h3 {
     margin: 0 auto;
-    font-size: 40px;
-    width: 600px;
+    font-size: 30px;
     text-decoration: underline;
     color: #4A4C4E;
 }
 
 .container1 {
-    width: 760px;
+    width: 700px;
     margin: 20px auto;
     padding: 25px;
     border: 3px solid #4A4C4E;
@@ -49,48 +51,48 @@ h3 {
 
 .container2 {
     color: #4A4C4E;
-    background-color: #FFFFFF;
+    background-color: #FFFF;
     border: 3px solid #4A4C4E;
     border-radius: 25px;
     margin: 0 auto;
-    width: 50%;
+    width: 80%;
     padding: 10px;
     text-align: center;
 }
 
 .container3 {
     color: #4A4C4E;
-    background-color: #FFFF;
+    background-color: #FFFFFF;
     border: 3px solid #4A4C4E;
-    border-radius: 25px;
+    border-radius: 20px;
     margin: 0 auto;
-    width: 50%;
+    width: 80%;
     padding: 10px;
     text-align: center;
 }
 
-.card-body {
-    background-color: #4A4C4E;
+.container4 {
     border: 3px solid #4A4C4E;
     border-radius: 25px;
+    background-color: #FFFFFF;
+    color: #4A4C4E;
+    width: 80%;
+    padding: 5px;
+    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-#enter-names {
-    margin: 0 auto;
-    width: 80%;
+#empty-div {
+    /*border: 3px solid #4A4C4E;*/
     border-radius: 25px;
-}
-
-#choose-battle-mode {
+    background-color: #FFFFFF;
+    color: #4A4C4E;
+    width: 150px;
+    padding: 1px;
     margin: 0 auto;
-    width: 80%;
-    border-radius: 25px;
-}
-
-#choose-trial-length {
-    margin: 0 auto;
-    width: 80%;
-    border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .buttonHolder {
@@ -105,7 +107,7 @@ h3 {
     background-color: #FFFFFF;
 }
 
-.display-4 {
+.display-2 {
     font-size: 40px;
     color: #4A4C4E;
     border: 3px solid #4A4C4E;
@@ -114,4 +116,9 @@ h3 {
     width: 500px;
     margin-right: auto;
     margin-left: auto;
+}
+
+.input-group {
+    margin: 0 auto;
+    padding: 1%;
 }
