--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,47 +1,103 @@
+@media only screen and (max-width: 600px) {}
+
+
+
+-------------------------------------------------------------------
+
+
+
+html {
+    box-sizing: border-box;
+    height:100%;
+    width: 100%;
+}
+
+header {
+    top: 0;
+    background-color: #4A4C4E;
+    color: #FFFFFF;
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
+}
+
+footer {
+    bottom: 0;
+    background-color: #FFFFFF;
+    color: #4A4C4E;
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+}
+
 body {
+    height: 100%;
     padding: 0;
-    margin: 0 auto;
+    margin: 0;
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 18px;
-    line-height: 150%;
+    line-height: 100%;
     color: #4A4C4E;
     background: #FFFFFF;
     text-align: center;
 }
-
-.header-1 {
-    background-color: #4A4C4E;
+  
+h1 {
+    padding: 2%;
+    margin: auto;
+    margin-bottom: 5%;
+    font-size: 200%;
     color: #FFFFFF;
-    font-size: 48px;
+    background-color: #4A4C4E;
+    text-align: center;
+    /*width: 100%;*/
 }
 
-.header-2 {
+h2 {
     background-color: #4A4C4E;
     color: #FFFFFF;
     border: 3px solid #4A4C4E;
     border-radius: 25px;
-    font-size: 26px;
-}
-  
-h1 {
-    padding: 20px;
-    margin: 0 auto;
-    margin-bottom: 25px;
-    font-size: 42px;
-    color: #FFFFFF;
-    text-align: center;
+    font-size: 200%;
 }
 
-h2 {
+h3 {
     padding: 1%;
-    margin: 0 auto;
+    margin: auto;
     font-size: 30px;
     text-decoration: underline;
     color: #4A4C4E;
 }
 
+h4 {
+    color: #4A4C4E;
+    font-size: 16px;
+    opacity: 0.5;
+    text-align: center;
+}
+
+h5 {
+    font-size: 180%;
+    color: #FFFFFF;
+    border: 3px solid #4A4C4E;
+    border-radius: 25px;
+    background-color: #4A4C4E;
+    width: 100%;
+    max-width: 90%;
+    padding: 2%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
+
+p {
+    font-size: 90%;
+    line-height: 1.6;
+}
+
 .container1 {
-    width: 700px;
+    width: 90%;
+    max-width: 900px;
     margin: 20px auto;
     padding: 25px;
     border: 3px solid #4A4C4E;
@@ -54,9 +110,10 @@ h2 {
     background-color: #FFFF;
     border: 3px solid #4A4C4E;
     border-radius: 25px;
-    margin: 0 auto;
-    width: 80%;
-    padding: 10px;
+    margin: auto;
+    width: 90%;
+    max-width: 900px;
+    padding: 1%;
     text-align: center;
 }
 
@@ -77,10 +134,33 @@ h2 {
     background-color: #FFFFFF;
     color: #4A4C4E;
     width: 80%;
-    padding: 5px;
-    margin: 0 auto;
+    max-width: 65%;
+    padding: 1%;
+    margin: auto;
     margin-left: auto;
     margin-right: auto;
+}
+
+/*.container5 {
+    border: 3px solid #4A4C4E;
+    border-radius: 25px;
+    background-color: #FFFFFF;
+    width: 90%;
+    max-width: 80%;
+    padding: 1%;
+    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+}*/
+
+.jumbotron {
+    border: 3px solid #4A4C4E;
+    border-radius: 25px;
+    background-color: #FFFFFF;
+    width: 100%;
+    max-width: 90%;
+    margin: auto;
+    padding: 1%;
 }
 
 #empty-div {
@@ -88,37 +168,29 @@ h2 {
     border-radius: 25px;
     background-color: #FFFFFF;
     color: #4A4C4E;
-    width: 150px;
-    padding: 1px;
-    margin: 0 auto;
+    width: 20%;
+    max-width: 10%;
+    padding: 1%;
+    margin: auto;
     margin-left: auto;
     margin-right: auto;
 }
 
 .buttonHolder {
     text-align: center;
-    margin: 0 auto;
-    padding: 5px;
-}
-
-.jumbotron {
-    border: 3px solid #4A4C4E;
-    border-radius: 25px;
-    background-color: #FFFFFF;
-}
-
-.display-2 {
-    font-size: 40px;
-    color: #4A4C4E;
-    border: 3px solid #4A4C4E;
-    border-radius: 25px;
-    background-color: #fa9c1d;
-    width: 500px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
+    padding: 1%;
 }
 
 .input-group {
-    margin: 0 auto;
+    margin: auto;
     padding: 1%;
+}
+
+img {
+    margin: auto;
+    padding: 2%;
+    width: 90%;
+    max-width: 800px;
+    height: auto;
 }
