--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,11 +1,3 @@
-@media only screen and (max-width: 600px) {}
-
-
-
--------------------------------------------------------------------
-
-
-
 html {
     box-sizing: border-box;
     height:100%;
@@ -141,7 +133,19 @@ p {
     margin-right: auto;
 }
 
-/*.container5 {
+.container5 {
+    border: 3px solid #4A4C4E;
+    border-radius: 25px;
+    background-color: #FFFFFF;
+    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+    width: 90%;
+    max-width: 600px;
+}
+
+/*.container6 {
     border: 3px solid #4A4C4E;
     border-radius: 25px;
     background-color: #FFFFFF;
@@ -179,7 +183,10 @@ p {
 .buttonHolder {
     text-align: center;
     margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 1%;
+    max-width: 90%;
 }
 
 .input-group {
